--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="copyright" content="&copy; Copyright 2020 - Jesse Vermeulen">
-    <script type="text/javascript" src="https://api.isolation.is"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/icon.png">
     <link rel="stylesheet" href="./style.scss">
     
-    <title>Separated — United</title>
+    <title>Separated — United by Jesse Vermeulen</title>
 </head>
 <body>
     <main>
@@ -37,8 +36,20 @@
                 </g>
             </svg>
         </div>
+
+        <div class="button__wrapper">
+            <svg class="button__icon button__icon--left" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114.35 63.64">
+                <path d="M31.82,63.64,0,31.82,31.82,0,36,4.12,11.29,28.83h91.76L78.34,4.12,82.53,0l31.82,31.82L82.53,63.64l-4.19-4.19L103.05,34.8H11.29L36,59.45Z"/>
+            </svg>
+            <div class="button" role="button" aria-pressed="false">
+                <div class="button__toggle" role="button"></div>
+            </div>
+            <svg class="button__icon button__icon--right" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 86.05 74.7">
+                <path d="M43,74.7,6.52,38.2A21.5,21.5,0,0,1,.71,28a23.4,23.4,0,0,1,0-11.52,21,21,0,0,1,5.79-10A22,22,0,0,1,16.66.71a22.92,22.92,0,0,1,11.4,0A22.2,22.2,0,0,1,38.2,6.52L43,11.21l4.83-4.69A22.38,22.38,0,0,1,58,.73a22.84,22.84,0,0,1,11.38,0A22,22,0,0,1,79.53,6.52a21,21,0,0,1,5.79,10,23.28,23.28,0,0,1,0,11.52A21.5,21.5,0,0,1,79.53,38.2Zm0-8.45L75.31,34a15.58,15.58,0,0,0,4.26-7.4,17.34,17.34,0,0,0,0-8.47,15.06,15.06,0,0,0-4.25-7.32A16.18,16.18,0,0,0,67.9,6.49a16.56,16.56,0,0,0-8.36,0A16.82,16.82,0,0,0,52,10.82l-9,8.7-9-8.7A16.55,16.55,0,0,0,18.15,6.49a16.18,16.18,0,0,0-7.44,4.29A15,15,0,0,0,6.47,18.1a17.11,17.11,0,0,0,0,8.47A15.9,15.9,0,0,0,10.75,34Z"/>
+            </svg>
+        </div>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
